Java 11 compatibility
- Disabled cleaning/leak-prevention workarounds
- Parent-Classloader reflection hack was obsolete, removed.
- Limbus Utils Manifest: Add-Opens Clause. For ThreadLocal
cleaning/leak-prevention
- Limbus Utils: ThreadLocal Leak Prevention maybe unnecessary. Hack
relaxed.
- README: Add-Opens Clause documented.